fix: resolve clipping

--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@ form.container {
 	border: 2px solid #dee2e6;
 	border-top-left-radius: 0.25rem;
 	border-top-right-radius: 0.25rem;
+	padding-bottom: 2rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
